tests/ui/rfcs/rfc-2294-if-let-guard/warns.edition2021.stderr
error: irrefutable `if let` guard pattern
  --> $DIR/warns.rs:8:20
   |
LL |         Some(x) if let () = x => {}
   |                    ^^^^^^^^^^
   |
   = note: this pattern will always match, so the guard is useless
   = help: consider removing the guard and adding a `let` inside the match arm
note: the lint level is defined here
  --> $DIR/warns.rs:5:8
   |
LL | #[deny(irrefutable_let_patterns)]
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/warns.rs:17:25
   |
LL |         x if let None | None = x => {}
   |                  ----   ^^^^ no value can reach this
   |                  |
   |                  matches all the relevant values
   |
note: the lint level is defined here
  --> $DIR/warns.rs:14:8
   |
LL | #[deny(unreachable_patterns)]
   |        ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

